Add selection sort

--- a/dsaStudy/dsaStudy.vcxproj.filters
+++ b/dsaStudy/dsaStudy.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="exercises\2.1-4.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="sorting\selection.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sorting\sorting.h">
