--- a/dsaStudy/dsaStudy.vcxproj.filters
+++ b/dsaStudy/dsaStudy.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="sorting\selection.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="sorting\merge.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sorting\sorting.h">
