Add max subarray algorithm implementation

--- a/dsaStudy/dsaStudy.vcxproj
+++ b/dsaStudy/dsaStudy.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="dsaStudy.cpp" />
     <ClCompile Include="exercises\2.1-4.cpp" />
     <ClCompile Include="searching\binarySearch.cpp" />
+    <ClCompile Include="searching\findMaxSubarray.cpp" />
     <ClCompile Include="searching\linearSearch.cpp" />
     <ClCompile Include="sorting\insertion.cpp" />
     <ClCompile Include="sorting\merge.cpp" />
