--- a/dsaStudy/dsaStudy.vcxproj.filters
+++ b/dsaStudy/dsaStudy.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="searching\binarySearch.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="searching\findMaxSubarray.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sorting\sorting.h">
