--- a/dsaStudy/dsaStudy.vcxproj
+++ b/dsaStudy/dsaStudy.vcxproj
@@ -132,7 +132,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dsaStudy.cpp" />
-    <ClCompile Include="exercises\2.1-4.cpp" />
+    <ClCompile Include="exercises\addBinaryIntegers.cpp" />
+    <ClCompile Include="exercises\slowMaxSubarray.cpp" />
     <ClCompile Include="searching\binarySearch.cpp" />
     <ClCompile Include="searching\findMaxSubarray.cpp" />
     <ClCompile Include="searching\linearSearch.cpp" />
