--- a/dsaStudy/dsaStudy.vcxproj
+++ b/dsaStudy/dsaStudy.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="dsaStudy.cpp" />
     <ClCompile Include="exercises\addBinaryIntegers.cpp" />
+    <ClCompile Include="exercises\fastMaxSubarray.cpp" />
     <ClCompile Include="exercises\slowMaxSubarray.cpp" />
     <ClCompile Include="searching\binarySearch.cpp" />
     <ClCompile Include="searching\findMaxSubarray.cpp" />
