--- a/dsaStudy/dsaStudy.vcxproj
+++ b/dsaStudy/dsaStudy.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="exercises\addBinaryIntegers.cpp" />
     <ClCompile Include="exercises\fastMaxSubarray.cpp" />
     <ClCompile Include="exercises\slowMaxSubarray.cpp" />
+    <ClCompile Include="matrices\squareMatrixMultiply.cpp" />
     <ClCompile Include="searching\binarySearch.cpp" />
     <ClCompile Include="searching\findMaxSubarray.cpp" />
     <ClCompile Include="searching\linearSearch.cpp" />
@@ -146,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="exercises\exercises.h" />
+    <ClInclude Include="matrices\matrices.h" />
     <ClInclude Include="searching\searching.h" />
     <ClInclude Include="sorting\sorting.h" />
     <ClInclude Include="util\timer.h" />
