--- a/dsaStudy/dsaStudy.vcxproj
+++ b/dsaStudy/dsaStudy.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="exercises\slowMaxSubarray.cpp" />
     <ClCompile Include="matrices\squareMatrixMultiply.cpp" />
     <ClCompile Include="matrices\strassenAlgorithm.cpp" />
+    <ClCompile Include="randomized\hireAssistant.cpp" />
     <ClCompile Include="searching\binarySearch.cpp" />
     <ClCompile Include="searching\findMaxSubarray.cpp" />
     <ClCompile Include="searching\linearSearch.cpp" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="exercises\exercises.h" />
     <ClInclude Include="matrices\matrices.h" />
+    <ClInclude Include="randomized\randomized.h" />
     <ClInclude Include="searching\searching.h" />
     <ClInclude Include="sorting\sorting.h" />
     <ClInclude Include="util\timer.h" />
