--- a/dsaStudy/dsaStudy.vcxproj
+++ b/dsaStudy/dsaStudy.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="matrices\squareMatrixMultiply.cpp" />
     <ClCompile Include="matrices\strassenAlgorithm.cpp" />
     <ClCompile Include="randomized\hireAssistant.cpp" />
+    <ClCompile Include="randomized\randomSetSample.cpp" />
     <ClCompile Include="searching\binarySearch.cpp" />
     <ClCompile Include="exercises\findMaxSubarray.cpp" />
     <ClCompile Include="searching\linearSearch.cpp" />
