--- a/dsaStudy/dsaStudy.vcxproj.filters
+++ b/dsaStudy/dsaStudy.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="searching\scrambleSearch.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="sorting\heapsort.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sorting\sorting.h">
