Make data structures folder and add heap data structure

--- a/dsaStudy/dsaStudy.vcxproj
+++ b/dsaStudy/dsaStudy.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="data-structures\heap\heap.cpp" />
+    <ClCompile Include="data-structures\priority-queue\priority-queue.cpp" />
     <ClCompile Include="dsaStudy.cpp" />
     <ClCompile Include="exercises\addBinaryIntegers.cpp" />
     <ClCompile Include="exercises\fastMaxSubarray.cpp" />
@@ -153,6 +155,8 @@
     <ClCompile Include="util\util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="data-structures\heap\heap.h" />
+    <ClInclude Include="data-structures\priority-queue\priority-queue.h" />
     <ClInclude Include="exercises\exercises.h" />
     <ClInclude Include="matrices\matrices.h" />
     <ClInclude Include="randomized\randomized.h" />
